# WrinkleFree-Eval

./: README.md  pyproject.toml
scripts/: evaluate.py
src/wrinklefree_eval/: api.py
src/wrinklefree_eval/models/: __init__.py  bitnet_model.py
tests/: test_smoke.py
