[project]
name = "wrinklefree-eval"
version = "0.1.0"
description = "Clean evaluation harness for BitDistill models - GLUE and CNN/DailyMail benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WrinkleFree Team" }]
keywords = ["llm", "evaluation", "benchmark", "bitnet", "quantization"]

dependencies = [
    "lm-eval>=0.4.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "rouge-score>=0.1.2",
    "evaluate>=0.4.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
]
bitnet = [
    # BitNet inference kernels (optional)
]

[project.scripts]
wrinklefree-eval = "wrinklefree_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wrinklefree_eval"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
